# AIDevToolsHack

./: .gitignore  README.md  docker-compose.yml  prompt.txt
agent/: .dockerignore  .env.example  Dockerfile  README.md  instructions.txt  main.py  pyproject.toml
agent/src/: config.py
agent/tmp/: agentos.db
mcpserver/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
mcpserver/src/: config.py
mcpserver/src/core/calendar/: __init__.py  prompts.py  resources.py  tools.py
mcpserver/src/core/email/: __init__.py  prompts.py  resources.py  tools.py  utils.py
mcpserver/tests/: test_mcp_server.py
ui/: Dockerfile  main.py  pyproject.toml
