[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-protocol>=0.1.0",
    "a2a-sdk>=0.3.20",
    "agno>=2.3.11",
    "fastapi>=0.124.2",
    "mcp>=1.23.3",
    "openai>=2.11.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
]
