[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocaldav>=0.5.1",
    "aioimaplib>=2.0.1",
    "aiosmtplib>=5.0.0",
    "fastmcp>=2.13.3",
    "html2text>=2025.4.15",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "vobject>=0.9.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode="auto"
